syntax = "proto3";

package stream;

option go_package = "./pb";

message Goods {
  int64 id = 1;
  string goods_id = 2;
  int64 category_id = 3;
  double precoupon_price = 4;
  double aftercoupon_price = 5;
  string goods_desc = 6;
  int64 wish_points = 7;
  int64 coupon_start_time = 8;
  int64 coupon_end_time = 9;
  int64 coupon_discount = 10;
  int64 coupon_remain_quantity = 11;
}

message GoodsReq {
  int64 id = 1;
}

message GoodsResp {
  int64 id = 1;
  string goods_id = 2;
  int64 category_id = 3;
  double precoupon_price = 4;
  double aftercoupon_price = 5;
  string goods_desc = 6;
  int64 wish_points = 7;
  int64 coupon_start_time = 8;
  int64 coupon_end_time = 9;
  int64 coupon_discount = 10;
  int64 coupon_remain_quantity = 11;
}

service Shop {
  rpc getGoodsById(GoodsReq) returns (GoodsResp);
}